--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,12 @@ project(amqp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_library(poco_simple_handler SimplePocoHandler.cpp SimplePocoHandler.h)
-target_link_libraries(poco_simple_handler PocoNet PocoFoundation)
+#add_library(poco_simple_handler SimplePocoHandler.cpp SimplePocoHandler.h)
+#target_link_libraries(poco_simple_handler PocoNet PocoFoundation)
+#add_executable(amqp main.cpp SimplePocoHandler.h SimplePocoHandler.cpp)
+#target_link_libraries(amqp libamqpcpp.a poco_simple_handler)
+
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
 add_executable(amqp main.cpp SimplePocoHandler.h SimplePocoHandler.cpp)
-target_link_libraries(amqp libamqpcpp.a poco_simple_handler)
+target_link_libraries(${CMAKE_PROJECT_NAME} ${CONAN_LIBS})
